--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.0.12",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
